force-app/main/default/objects/Order_Payment__c/Order_Payment__c.object-meta.xml
<CustomObject>
    <label>Order Payment</label>
    <nameField>
        <displayFormat>Payment - {0000}</displayFormat>
        <label>Order Payment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>