force-app/main/default/objects/Order_Payment__c/fields/Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount__c</fullName>
    <formula>Text(Order__r.Booking_Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Amount</label>
    <type>Text</type>
</CustomField>