force-app/main/default/objects/Order_Payment__c/fields/Booking_ids__c.field-meta.xml
<CustomField>
    <fullName>Booking_ids__c</fullName>
    <formula>Order__r.Website_Order_Id__c</formula>
    <label>Booking ID</label>
    <type>Text</type>
</CustomField>