force-app/main/default/objects/Order_Payment__c/fields/Enquiry__c.field-meta.xml
<CustomField>
    <fullName>Enquiry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiry</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Order Payments</relationshipLabel>
    <relationshipName>Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>