force-app/main/default/objects/Order_Payment__c/fields/Log_Payment__c.field-meta.xml
<CustomField>
    <fullName>Log_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Payment</label>
    <referenceTo>Payment_Split__c</referenceTo>
    <relationshipLabel>Order Payments</relationshipLabel>
    <relationshipName>Order_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>