force-app/main/default/objects/Order_Payment__c/fields/Payment_Acknowledgement_Generated__c.field-meta.xml
<CustomField>
    <fullName>Payment_Acknowledgement_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Acknowledgement Generated?</label>
    <type>Checkbox</type>
</CustomField>