force-app/main/default/objects/Order_Payment__c/fields/Payment_reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_reference__c</fullName>
    <formula>Payments__r.Tracking_Id__c</formula>
    <label>Payment reference</label>
    <type>Text</type>
</CustomField>