force-app/main/default/objects/Order_Payment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Payment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booking Amount</fullName>
            </value>
            <value>
                <fullName>Down Payment</fullName>
            </value>
            <value>
                <fullName>Full Payment</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Warranty Payment</fullName>
            </value>
            <value>
                <fullName>Accessories Payment</fullName>
            </value>
            <value>
                <fullName>RSA Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>