force-app/main/default/objects/Order_Payment__c/fields/Website_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Payment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Website Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>