force-app/main/default/objects/Order_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount1__c</columns>
    <columns>Log_Payment__c</columns>
    <columns>Order__c</columns>
    <columns>Type__c</columns>
    <columns>Payments__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>